--- a/public/index.html
+++ b/public/index.html
@@ -18,6 +18,12 @@
   </head>
   <body>
     <div id="root" class="full-height"></div>
+
+    <!--
+      Inject Plotly.js to power PlotlyGraphComponent
+    -->
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
+    
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
